Scrollbar fix, show notification in chrome for OGG
fix #102

--- a/css/style-playerbar.css
+++ b/css/style-playerbar.css
@@ -7,25 +7,14 @@
 	background: #eee;
 	border-bottom: 1px solid #e7e7e7;
 	z-index: 50;
-	-moz-box-shadow: 0 -3px 7px #000;
-	-webkit-box-shadow: 0 -3px 7px #000;
-	box-shadow: 0 -3px 7px #000;
-	/* initial state is hidden */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity = 0);
-	opacity: 0;
-	/* transistion to fade in*/
-	-webkit-transition: opacity 500ms;
-	-moz-transition: opacity 500ms;
-	-o-transition: opacity 500ms;
-	transition: opacity 500ms;
-
 }
 
-#playerbar.started {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity = 100);
-	opacity: 1;
+#playerbar, #playerbar * {
+	display: none;
+}
+
+#playerbar.started, #playerbar.started * {
+	display: inline;
 }
 
 #playerbar > img.right {
@@ -72,7 +61,7 @@
 }
 
 #sm2-container embed, #sm2-container object,
-#playerbar.started #sm2-container embed, #playerbar.started #sm2-container object {
+#sm2-container.started embed, #sm2-container.started object {
 	position: absolute;
 	left: 259px; /* with sidebar 300px */
 	top: 8px;
@@ -91,8 +80,8 @@
 
 #sm2-container.swf_loaded, #sm2-container.swf_unblocked,
 #playerbar #sm2-container embed, #playerbar #sm2-container object,
-#playerbar.started #sm2-container.swf_loaded embed, #playerbar.started #sm2-container.swf_unblocked embed,
-#playerbar.started #sm2-container.swf_loaded object, #playerbar.started #sm2-container.swf_unblocked object, {
+#sm2-container.started.swf_loaded embed, #sm2-container.started.swf_unblocked embed,
+#sm2-container.started.swf_loaded object, #sm2-container.started.swf_unblocked object, {
 	/* hide container if flash is loaded, unblocked or player isn't started yet */
 	width: 1px;
 	height: 1px;
@@ -149,6 +138,10 @@
 	width: 100%;
 	height: 15px;
 	background-color: #ccc;
+}
+
+#playerbar.started .progress, #playerbar.started .seek-bar, #playerbar.started .play-bar {
+	display: block;
 }
 
 #playerbar .play-bar {
